--- a/front/main/main.html
+++ b/front/main/main.html
@@ -11,7 +11,18 @@
 <body>
 <header>
     <img src="../images/icon.svg" alt="тут должна быть иконка сайта">
-    <h1>Добро пожаловать на сайт</h1>
+    <div class="btn">
+        <button> боты </button>
+        <button> о нас </button>
+        <button> поиск </button>
+        <button> козрзина </button>
+    </div>
+    <div class="btn2">
+        <button> войти </button>
+    </div>
+    <div class="btn3">
+        <button> зарегистрироваться </button>
+    </div>
 </header>
 <main>
     <h2>Карты товаров и т.д.</h2>
