тут чето не то с регом

--- a/front/register/register.html
+++ b/front/register/register.html
@@ -15,13 +15,13 @@
     <input type="email" id="user" name="user" placeholder="логин"/>
     <input type="password" id="pass" name="pass" placeholder="пароль"/>
     <input type="number" id="number" name="number" placeholder="Возраст">
-    <button type="submit">&#xf0da;</button>
+    <button type="submit" onclick="window.location.href='../main/main.html'">&#xf0da;</button>
     <form>
         <span> Выберите ваш пол </span>
             <p>
             <input type="radio" name="gender" id="male" value="male">
             <label for="male"> Мужской </label>
-            <input type="radio" name="gender" id="female"value="female">
+            <input type="radio" name="gender" id="female" value="female">
             <label for="female"> Женский </label>
             <input type="radio" name="gender" id="none" value="none" checked>
             <label for="none"> Не указывать </label>
