--- a/front/main/main.html
+++ b/front/main/main.html
@@ -12,16 +12,14 @@
 <header>
     <img src="../images/icon.svg" alt="тут должна быть иконка сайта">
     <div class="btn">
-        <button> боты </button>
         <button> о нас </button>
+        <button> тг боты </button>
         <button> поиск </button>
         <button> козрзина </button>
     </div>
-    <div class="btn2">
-        <button> войти </button>
-    </div>
-    <div class="btn3">
-        <button> зарегистрироваться </button>
+    <div class="btn log">
+        <a class="button button-log" href="../auth/auth.html">войти</a>
+        <a class="button button-reg" href="../register/register.html">зарегистрироваться</a>
     </div>
 </header>
 <main>
