тут чето не то с регом

--- a/front/main/main.html
+++ b/front/main/main.html
@@ -20,7 +20,7 @@
         <button> информация </button>
         <button> тг боты </button>
         <button> поиск </button>
-        <button> козрзина </button>
+        <button> корзина </button>
     </div>
     <div class="btn log">
         <a class="button button-log" href="../auth/auth.html">войти</a>
@@ -82,9 +82,23 @@
                 <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
 
                 <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+        <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
 
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
+
+                <h1>Хочешь сделать свой бизнес лучше?<br> Связывайся с нами!</h1>
 
     </div>
 </footer>
+<script src="../main/script.js"></script>
 </body>
 </html>
