--- a/front/main/main.html
+++ b/front/main/main.html
@@ -58,17 +58,16 @@
 
         <div class="tg_bots">
             <div class="name tg_bots name_position">
-                <h1 class="my-0 fw-normal">Наши готовые тг боты</h1>
+                <h1 class="tg_bots_name">Наши готовые тг боты</h1>
             </div>
-                        <h1 class="card-title pricing-card-title">$29<small
-                                class="text-body-secondary fw-light">/mo</small></h1>
-                        <ul class="list-unstyled mt-3 mb-4">
+                        <h1 class="tg_bots_price">$29</h1>
+                        <ul class="tg_bots_characteristics">
                             <li>30 users included</li>
                             <li>15 GB of storage</li>
                             <li>Phone and email support</li>
                             <li>Help center access</li>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+<!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
                 </div>
             </div>
 
