--- a/front/main/main.html
+++ b/front/main/main.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../header/header.css">
     <link rel="stylesheet" href="../footer/footer.css">
     <link rel="stylesheet" href="../tg_bots/tg_bots.css">/footer.css">
+    <link rel="stylesheet" href="../about/about.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +19,10 @@
         <h1>XZBOT</h1>
     </div>
     <div class="btn">
-        <button> информация</button>
-        <button> тг боты</button>
-        <button> поиск</button>
-        <button> корзина</button>
+        <button> информация </button>
+        <button> тг боты </button>
+        <button> каталог </button>
+        <button> отзывы </button>
     </div>
     <div class="btn log">
         <a class="button button-log" href="../auth/auth.html">войти</a>
@@ -53,29 +54,46 @@
                 услуги доступными для бизнеса любого размера.
             </li>
         </ol>
-        <b>Выбирая нас, вы выбираете надежного партнера в мире технологий. Давайте вместе сделаем ваш бизнес успешнее с
-            помощью нашего Telegram-бота!</b>
 
+    </div>
+
+    <div class="tg_bots_block">
+        <div class="tg_bots_title"><h1>▎Наши варианты <strong> ботов </strong></h1></div>
         <div class="tg_bots">
             <div class="name tg_bots name_position">
                 <h1 class="tg_bots_name">Наши готовые тг боты</h1>
             </div>
-                        <h1 class="tg_bots_price">$29</h1>
+                        <h1 class="tg_bots_price">$5</h1>
                         <ul class="tg_bots_characteristics">
                             <li>30 users included</li>
                             <li>15 GB of storage</li>
                             <li>Phone and email support</li>
                             <li>Help center access</li>
                         </ul>
+            <button> каталог</button>
 <!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
-                </div>
-            </div>
+        </div>
 
+        <div class="tg_bots_2">
+            <div class="name tg_bots name_position">
+                <h1 class="tg_bots_name">Наши готовые тг боты</h1>
+            </div>
+                        <h1 class="tg_bots_price">$?</h1>
+                        <ul class="tg_bots_characteristics">
+                            <li>30 users included</li>
+                            <li>15 GB of storage</li>
+                            <li>Phone and email support</li>
+                            <li>Help center access</li>
+                        </ul>
+            <button> заказать </button>
+<!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
+        </div>
+    </div>
 </main>
 <footer>
 
 
- </footer>
+</footer>
 <!--<script src="../main/script.js"></script>-->
 </body>
 </html>
