--- a/front/main/main.html
+++ b/front/main/main.html
@@ -8,8 +8,9 @@
     <link href="../main/main.css" rel="stylesheet">
     <link rel="stylesheet" href="../header/header.css">
     <link rel="stylesheet" href="../footer/footer.css">
-    <link rel="stylesheet" href="../tg_bots/tg_bots.css">/footer.css">
+    <link rel="stylesheet" href="../tg_bots/tg_bots.css">
     <link rel="stylesheet" href="../about/about.css">
+    <link rel="stylesheet" href="../catalog/catalog.css">
     <title>Document</title>
 </head>
 <body>
@@ -70,7 +71,7 @@
                             <li>Phone and email support</li>
                             <li>Help center access</li>
                         </ul>
-            <button> каталог</button>
+            <button id="tg_bot_button_catalog"> каталог</button>
 <!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
         </div>
 
@@ -86,14 +87,17 @@
                             <li>Help center access</li>
                         </ul>
             <button> заказать </button>
-<!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
         </div>
+    </div>
+
+    <div class="catalog_block">
+        <div class="catalog_title"><h1>▎Вот готовые варианты  <strong> ботов </strong></h1>
     </div>
 </main>
 <footer>
 
 
 </footer>
-<!--<script src="../main/script.js"></script>-->
+<script src="../main/script.js"></script>
 </body>
 </html>
