--- a/front/main/main.html
+++ b/front/main/main.html
@@ -44,17 +44,12 @@
             разрабатываем ботов с учетом специфики вашего бизнеса, чтобы они максимально соответствовали вашим
             потребностям и ожиданиям.</p>
         <h2>▎Почему именно мы лучше других</h2>
-        <ol>
-            <li>Индивидуальный подход: Мы понимаем, что каждый бизнес уникален. Поэтому мы разрабатываем решения,
-                которые идеально подходят именно вам.
-            </li>
-            <li>Качество и надежность: Наша команда состоит из опытных разработчиков, которые используют только
-                современные технологии и лучшие практики в разработке.
-            </li>
-            <li>Доступные цены: Мы предлагаем конкурентоспособные расценки без ущерба для качества, что делает наши
-                услуги доступными для бизнеса любого размера.
-            </li>
-        </ol>
+            <p>Индивидуальный подход: Мы понимаем, что каждый бизнес уникален. Поэтому мы разрабатываем решения,
+                которые идеально подходят именно вам.<br>
+                Качество и надежность: Наша команда состоит из опытных разработчиков, которые используют только
+                современные технологии и лучшие практики в разработке.<br>
+                Доступные цены: Мы предлагаем конкурентоспособные расценки без ущерба для качества, что делает наши
+                услуги доступными для бизнеса любого размера.</p>
 
     </div>
 
@@ -91,7 +86,7 @@
     </div>
 
     <div class="catalog_block">
-        <div class="catalog_title"><h1>▎Вот готовые варианты  <strong> ботов </strong></h1>
+        <div class="catalog_title"><h1>▎Вот готовые варианты  <strong> ботов </strong></h1></div>
     </div>
 </main>
 <footer>
