--- a/front/main/main.html
+++ b/front/main/main.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../tg_bots/tg_bots.css">
     <link rel="stylesheet" href="../about/about.css">
     <link rel="stylesheet" href="../catalog/catalog.css">
+    <link rel="stylesheet" href="../mine_bot/mine_bot.css">
     <title>Document</title>
 </head>
 <body>
@@ -61,10 +62,11 @@
             </div>
                         <h1 class="tg_bots_price">$5</h1>
                         <ul class="tg_bots_characteristics">
-                            <li>30 users included</li>
-                            <li>15 GB of storage</li>
-                            <li>Phone and email support</li>
-                            <li>Help center access</li>
+                            <li>бот будет готов почти сразу после оплаты</li>
+                            <li>качество 99%</li>
+                            <li>48ч и бот будет доступен в тг</li>
+                            <li>1 неделя гарантии</li>
+                            <li> - </li>
                         </ul>
             <button id="tg_bot_button_catalog"> каталог</button>
 <!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
@@ -72,21 +74,30 @@
 
         <div class="tg_bots_2">
             <div class="name tg_bots name_position">
-                <h1 class="tg_bots_name">Наши готовые тг боты</h1>
+                <h1 class="tg_bots_name">тг бот сделанный по вашим пожеланиям</h1>
             </div>
                         <h1 class="tg_bots_price">$?</h1>
                         <ul class="tg_bots_characteristics">
-                            <li>30 users included</li>
-                            <li>15 GB of storage</li>
-                            <li>Phone and email support</li>
-                            <li>Help center access</li>
+                            <li>такой будет только у вас</li>
+                            <li>качество 99%</li>
+                            <li>от 48ч до 2 недель бот будет в разработке</li>
+                            <li>помощь поддержке(если она потребуется)</li>
+                            <li>от 1ой до 2х недель гарантии</li>
                         </ul>
-            <button> заказать </button>
+            <button id="tg_bot_button_order"> заказать </button>
         </div>
     </div>
 
     <div class="catalog_block">
         <div class="catalog_title"><h1>▎Вот готовые варианты  <strong> ботов </strong></h1></div>
+    </div>
+    <div class="mine_bot_block"  id="mine_bot_block">
+        <form id="mine_bot_form" method="" action="" autocomplete="off">
+        <div class="mine_bot">
+        <input type="email" id="order_email" name="order_email" placeholder="почта" />
+        <input type="password" id="pass" name="pass" placeholder="пароль" />
+        </div>
+        </form>
     </div>
 </main>
 <footer>
