--- a/front/main/main.html
+++ b/front/main/main.html
@@ -94,8 +94,75 @@
     <div class="mine_bot_block"  id="mine_bot_block">
         <form id="mine_bot_form" method="" action="" autocomplete="off">
         <div class="mine_bot">
-        <input type="email" id="order_email" name="order_email" placeholder="почта" />
-        <input type="password" id="pass" name="pass" placeholder="пароль" />
+            <input type="email" id="order_email" name="order_email" placeholder="почта" />
+            <input type="email" id="pass" name="pass" placeholder="пароль" />
+            <h2>1. Цели и задачи</h2>
+            <p>
+              Какова основная цель бота? (информирование, поддержка, продажи и т.п.)<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Какие основные задачи должен решать бот?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+
+            <h2>2. Функционал</h2>
+            <p>
+              Какие ключевые функции нужны? (уведомления, сбор данных, опросы, интеграции)<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Требуется ли регистрация или авторизация пользователей?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Нужно ли поддерживать кнопки и меню?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+
+            <h2>3. Взаимодействие с пользователем</h2>
+            <p>
+              Какие сценарии общения важны? (приветствие, FAQ, инструкции)<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Нужно ли обрабатывать свободные сообщения или только команды?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+
+            <h2>4. Технические и административные моменты</h2>
+            <p>
+              Есть ли предпочтения по технологиям или платформам?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Нужно ли хранить данные пользователей? Какие и где?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Кто будет администрировать бота? Нужен ли интерфейс управления?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+
+            <h2>5. Визуальный стиль и особенности</h2>
+            <p>
+              Есть ли требования к стилю сообщений?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Нужно ли многоязычие?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+
+            <h2>6. Сроки и бюджет</h2>
+            <p>
+              Какие сроки реализации?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
+            <p>
+              Какой бюджет проекта?<br>
+              <input type="text" size="60" placeholder="Ваш ответ здесь">
+            </p>
         </div>
         </form>
     </div>
