--- a/front/main/main.html
+++ b/front/main/main.html
@@ -94,8 +94,7 @@
     <div class="mine_bot_block"  id="mine_bot_block">
         <form id="mine_bot_form" method="" action="" autocomplete="off">
         <div class="mine_bot">
-            <input type="email" id="order_email" name="order_email" placeholder="почта" />
-            <input type="email" id="pass" name="pass" placeholder="пароль" />
+            <input type="email" id="order_email" name="order_email" placeholder="почта для связи с вами">
             <h2>1. Цели и задачи</h2>
             <p>
               Какова основная цель бота? (информирование, поддержка, продажи и т.п.)<br>
@@ -129,7 +128,7 @@
               Нужно ли обрабатывать свободные сообщения или только команды?<br>
               <input type="text" size="60" placeholder="Ваш ответ здесь">
             </p>
-
+        <div class="mine_bot_2">
             <h2>4. Технические и административные моменты</h2>
             <p>
               Есть ли предпочтения по технологиям или платформам?<br>
@@ -163,6 +162,7 @@
               Какой бюджет проекта?<br>
               <input type="text" size="60" placeholder="Ваш ответ здесь">
             </p>
+        </div>
         </div>
         </form>
     </div>
