НУ ВРОДЕ КАК ЧТО ТО ЕСТЬ

--- a/front/main/main.html
+++ b/front/main/main.html
@@ -53,41 +53,36 @@
                 услуги доступными для бизнеса любого размера.</p>
 
     </div>
+<div class="tg_bots_block">
+  <div class="tg_bots_title">
+    <h1>▎Наши варианты <strong> ботов </strong></h1>
+  </div>
+    <div class="tg_bots">
+        <h1 class="tg_bots_name">Наши готовые тг боты</h1>
+        <h1 class="tg_bots_price">$5</h1>
+        <ul class="tg_bots_characteristics">
+          <li>бот будет готов почти сразу после оплаты</li>
+          <li>качество 99%</li>
+          <li>48ч и бот будет доступен в тг</li>
+          <li>1 неделя гарантии</li>
+          <li>-</li>
+        </ul>
+        <button id="tg_bot_button_catalog">каталог</button>
+      </div>
 
-    <div class="tg_bots_block">
-        <div class="tg_bots_title"><h1>▎Наши варианты <strong> ботов </strong></h1></div>
-        <div class="tg_bots">
-            <div class="name tg_bots name_position">
-                <h1 class="tg_bots_name">Наши готовые тг боты</h1>
-            </div>
-                        <h1 class="tg_bots_price">$5</h1>
-                        <ul class="tg_bots_characteristics">
-                            <li>бот будет готов почти сразу после оплаты</li>
-                            <li>качество 99%</li>
-                            <li>48ч и бот будет доступен в тг</li>
-                            <li>1 неделя гарантии</li>
-                            <li> - </li>
-                        </ul>
-            <button id="tg_bot_button_catalog"> каталог</button>
-<!--                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>-->
-        </div>
-
-        <div class="tg_bots_2">
-            <div class="name tg_bots name_position">
-                <h1 class="tg_bots_name">тг бот сделанный по вашим пожеланиям</h1>
-            </div>
-                        <h1 class="tg_bots_price">$?</h1>
-                        <ul class="tg_bots_characteristics">
-                            <li>такой будет только у вас</li>
-                            <li>качество 99%</li>
-                            <li>от 48ч до 2 недель бот будет в разработке</li>
-                            <li>помощь поддержке(если она потребуется)</li>
-                            <li>от 1ой до 2х недель гарантии</li>
-                        </ul>
-            <button id="tg_bot_button_order"> заказать </button>
-        </div>
-    </div>
-
+      <div class="tg_bots_2">
+        <h1 class="tg_bots_name">тг бот сделанный по вашим пожеланиям</h1>
+        <h1 class="tg_bots_price">$?</h1>
+        <ul class="tg_bots_characteristics">
+          <li>такой будет только у вас</li>
+          <li>качество 99%</li>
+          <li>от 48ч до 2 недель бот будет в разработке</li>
+          <li>помощь поддержке(если она потребуется)</li>
+          <li>от 1ой до 2х недель гарантии</li>
+        </ul>
+        <button id="tg_bot_button_order">заказать</button>
+      </div>
+</div>
 <!-- Кнопки для открытия модальных окон -->
 
 
@@ -207,9 +202,26 @@
 </div>
 
 </main>
-<footer>
+<footer class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <h2 class="footer-logo">Ваш Сайт</h2>
+          <p>© 2025 Все права защищены.</p>
+          <p>Разработка и поддержка: <a href="mailto:support@yoursite.com" class="footer-link">support@yoursite.com</a></p>
+          <p>Телефон: <a href="tel:+71234567890" class="footer-link">+7 (123) 456-78-90</a></p>
+        </div>
 
-
+        <div class="footer-right">
+          <h3>Связаться с нами</h3>
+          <a href="https://t.me/your_bot_username" target="_blank" rel="noopener" class="tg-link" aria-label="Telegram бот">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#54A9EB" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M21.5 2.5L2.5 10.5l5.5 2.5 1.5 6 3.5-4 5 4 3-15z"/>
+            </svg>
+            <span>Наш Telegram бот</span>
+          </a>
+          <p class="footer-note">Нажмите, чтобы начать чат с ботом и получить помощь 24/7.</p>
+        </div>
+      </div>
 </footer>
 <script src="../main/script.js"></script>
 </body>
